# eeg-music

./: .gitignore  README.md  pyproject.toml
eeg_music/: dataloader.py  dataset.py  experiment.py  parse_data.py  utils.py
eeg_music/models/: base.py  conformer.py  eegnet.py  naive.py  pretrained_eegnetv4.py  utils.py
eeg_music/notebooks/: EEG Preprocessing.ipynb  calibration-data-exploration.ipynb  emotions.ipynb  explore_braindecode.ipynb  unfold_otree.ipynb
